syntax = "proto3";

package library;

option go_package = "github.com/raphoester/internal/contexts/authentication/infrastructure/proto";

import "google/protobuf/timestamp.proto";

service Authentication {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string refreshToken = 2;
  google.protobuf.Timestamp expiration = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string role = 2;
}